--- a/IBDPBasic.slides.html
+++ b/IBDPBasic.slides.html
@@ -13199,6 +13199,54 @@ a.anchor-link {
 <div class="reveal">
 <div class="slides">
 <section><section>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[18]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="o">%%HTML</span>
+<span class="p">&lt;</span><span class="nt">style</span><span class="p">&gt;</span>
+
+<span class="p">.</span><span class="nc">rise-enabled</span> <span class="p">.</span><span class="nc">reveal</span> <span class="nt">pre</span> <span class="p">{</span>
+     <span class="k">font-size</span><span class="p">:</span> <span class="mi">150</span><span class="kt">%</span><span class="p">;</span>
+    <span class="k">line-height</span><span class="p">:</span> <span class="mi">150</span><span class="kt">%</span>
+<span class="p">}</span>
+
+<span class="p">&lt;/</span><span class="nt">style</span><span class="p">&gt;</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+
+<div class="output_html rendered_html output_subarea ">
+<style>
+
+.rise-enabled .reveal pre {
+     font-size: 150%;
+    line-height: 150%
+}
+
+</style>
+
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13209,35 +13257,64 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><font size="10">Downloading Anaconda and install it.</font></p>
-
+<h1 id="Google-Anaconda-and-download-3.7-version.">Google Anaconda and download 3.7 version.<a class="anchor-link" href="#Google-Anaconda-and-download-3.7-version.">&#182;</a></h1><h1 id="Install-Python-3.7-version">Install Python 3.7 version<a class="anchor-link" href="#Install-Python-3.7-version">&#182;</a></h1><center><img src="image/python3-7.png"></center>
 </div>
 </div>
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We are going to use numpy, pandas, seaborn and matplotlib libraries. And for graphs we use inline.</p>
-
+<h1 id="Start-the-application-Anaconda-Navigator">Start the application Anaconda-Navigator<a class="anchor-link" href="#Start-the-application-Anaconda-Navigator">&#182;</a></h1><p><br></p>
+<center><img src="image/anaconda.png"></center>
 </div>
 </div>
 </div></section></section><section><section>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
-<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
-<span class="kn">import</span> <span class="nn">seaborn</span> <span class="k">as</span> <span class="nn">sns</span>
-<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
-<span class="o">%</span><span class="k">matplotlib</span> inline
-</pre></div>
-
-    </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Launch-Jupyter-Notebook">Launch Jupyter Notebook<a class="anchor-link" href="#Launch-Jupyter-Notebook">&#182;</a></h1><h1 id="It-will-start-a-terminal-and-open-a-browser.">It will start a terminal and open a browser.<a class="anchor-link" href="#It-will-start-a-terminal-and-open-a-browser.">&#182;</a></h1><center><img src="image/jupyter.png"></center>
 </div>
 </div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Create-a-folder.-New-&gt;-Folder">Create a folder. New &gt; Folder<a class="anchor-link" href="#Create-a-folder.-New-&gt;-Folder">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Rename-the-folder-to-Statistics">Rename the folder to Statistics<a class="anchor-link" href="#Rename-the-folder-to-Statistics">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="In-the-Statistics-folder,-create-a-file-called-Test-by-New-&gt;-Python-3">In the Statistics folder, create a file called Test by New &gt; Python 3<a class="anchor-link" href="#In-the-Statistics-folder,-create-a-file-called-Test-by-New-&gt;-Python-3">&#182;</a></h1>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Importing-libraries">Importing libraries<a class="anchor-link" href="#Importing-libraries">&#182;</a></h1>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>import numpy as np
+import pandas as pd
+import seaborn as sns
+import matplotlib.pyplot as plt
+%matplotlib inline</p>
 
+</div>
+</div>
 </div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
@@ -13249,8 +13326,8 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Download a data set from <a href="http://bit.ly/2M1yrW7">http://bit.ly/2M1yrW7</a></p>
-
+<h1 id="Download-a-data-set-from-http://bit.ly/2M1yrW7">Download a data set from <a href="http://bit.ly/2M1yrW7">http://bit.ly/2M1yrW7</a><a class="anchor-link" href="#Download-a-data-set-from-http://bit.ly/2M1yrW7">&#182;</a></h1><h1 id="Create-a-folder-called-Data">Create a folder called Data<a class="anchor-link" href="#Create-a-folder-called-Data">&#182;</a></h1><p><br></p>
+<center><img src="image/data.png"></center>
 </div>
 </div>
 </div></section></section><section><section>
@@ -14291,6 +14368,72 @@ concavity_worst                1.252
 concave points_worst           0.291
 symmetry_worst                0.6638
 fractal_dimension_worst       0.2075
+Unnamed: 32                     None
+dtype: object</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[19]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">min</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt output_prompt">Out[19]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>id                              8670
+diagnosis                          B
+radius_mean                    6.981
+texture_mean                    9.71
+perimeter_mean                 43.79
+area_mean                      143.5
+smoothness_mean              0.05263
+compactness_mean             0.01938
+concavity_mean                     0
+concave points_mean                0
+symmetry_mean                  0.106
+fractal_dimension_mean       0.04996
+radius_se                     0.1115
+texture_se                    0.3602
+perimeter_se                   0.757
+area_se                        6.802
+smoothness_se               0.001713
+compactness_se              0.002252
+concavity_se                       0
+concave points_se                  0
+symmetry_se                 0.007882
+fractal_dimension_se       0.0008948
+radius_worst                    7.93
+texture_worst                  12.02
+perimeter_worst                50.41
+area_worst                     185.2
+smoothness_worst             0.07117
+compactness_worst            0.02729
+concavity_worst                    0
+concave points_worst               0
+symmetry_worst                0.1565
+fractal_dimension_worst      0.05504
 Unnamed: 32                     None
 dtype: object</pre>
 </div>
